# haskell-learning

./: README.md  Tasks.lhs  baby.hs  baby1.hs  baby2.hs  baby2.lhs  baby3.hs  maps.hs  periodculc.hs
baby-main/: LICENSE  README.md  baby-main.cabal
baby-main/.stack-work/install/x86_64-linux/lts-9.0/8.0.2/flag-cache/: baby-main-0.1.0.0-DbCPeFMLXhqFt1ATakUWHl
baby-main/.stack-work/install/x86_64-linux/lts-9.0/8.0.2/lib/x86_64-linux-ghc-8.0.2/baby-main-0.1.0.0-DbCPeFMLXhqFt1ATakUWHl/: Lib.dyn_hi  Lib.hi
baby-main/.stack-work/install/x86_64-linux/lts-9.0/8.0.2/pkgdb/: baby-main-0.1.0.0-DbCPeFMLXhqFt1ATakUWHl.conf  package.cache
baby-main/src/: .baby2.hs.swp  Baby2.hs  Lib.hs
