name:                baby-main
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/RZ3DDD/baby-main#readme
license:             BSD3
license-file:        LICENSE
author:              Yury Shchutsky
maintainer:          RZ3DDD@gmail.com
copyright:           Copyright (c) Yury Shchutsky
category:            Education
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable baby-main-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , baby-main
  default-language:    Haskell2010

test-suite baby-main-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , baby-main
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/RZ3DDD/baby-main
